--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.7.0"
+    "mongodb": "^6.7.0",
+    "stripe": "^15.10.0"
   },
   "name": "survey-crud",
   "version": "1.0.0",
